--- a/category.css
+++ b/category.css
@@ -16,7 +16,7 @@ html,body{height: 100%;}
 }
 @media (orientation: portrait) {
     .page {
-        --banner-frac:40vh;
+        --banner-frac:40vh;     /* <--- Adjust*/
         grid-template-rows: var(--banner-frac) 1fr;
     }
 }
@@ -30,19 +30,30 @@ html,body{height: 100%;}
     z-index: 10;
     box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.6);
     display: grid;
-    padding: 20%;  /* Creates Issue in banner frac less than 20vh*/
+    padding: 0%;  /* <--- Adjust */
     text-align: center;
 }
 .page .banner.hc{justify-content: center;}
 .page .banner.vc{align-content: center;}
 
 
+.page .banner.withtab{
+    grid-template-columns: 1fr;
+}
+
 .page .banner .banner-div{
     color: var(--banner-title);
-    font-family: 'Anton','Lobster','Fugaz One', sans-serif;
     font-size: 2rem;
     /* background-color: rgba(255,255,255,0.1); */
     border-radius: 1rem;
+}
+
+.page .banner.withtab .banner-div{
+    grid-template-rows: 1fr 1fr;
+}
+
+.page .banner .banner-div .title{
+    font-family: 'Anton','Lobster','Fugaz One', sans-serif;
 }
 
 
