--- a/games.css
+++ b/games.css
@@ -47,7 +47,7 @@ html,body{height: 100%;}
     /* gap: 200px; */
 }
 
-.page .banner .banner-div .game-title{
+.page .banner .banner-div .title{
     font-size: 2rem;
     font-family: 'Anton','Lobster','Fugaz One', sans-serif;
 
@@ -55,7 +55,7 @@ html,body{height: 100%;}
 
 
 
-.page .banner .tabs{
+.page .banner .banner-div .tabs{
     font-family: 'Poppins';
     color: rgba(255,255,255,1);
     display: grid;
@@ -67,6 +67,7 @@ html,body{height: 100%;}
     column-gap: 1rem;
     row-gap: 1rem;
 }
+
 
 .page .banner .tabs .tab.player,
 .page .banner .tabs .tab.schedule
@@ -87,9 +88,6 @@ html,body{height: 100%;}
 .page .banner .tabs .tab.schedule:not(.active):hover{
     background-color: rgba(255,255,255,0.1);
 }
-
-
-
 
 
 
@@ -153,6 +151,7 @@ html,body{height: 100%;}
     background-color: rgba(0,0,0,0.1);
     height: 8rem;
     border-radius: 1rem;
+    
     /* cursor: pointer; */
     /* margin: 0rem 1rem; */
     /* transition: margin 0.2s; */
