--- a/style.css
+++ b/style.css
@@ -503,3 +503,12 @@ tr:first-child{
 }
 
 tr th{color: white;}
+
+td .male,
+td .female{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    font-size: 1rem;
+    width: 100%;
+}
