--- a/style.css
+++ b/style.css
@@ -317,139 +317,7 @@ a{
 
 
 
-/* -------------------------------------------------- game-event --- */
-/* .card.game-event.single{--height:10.8rem} */
-/* .card.game-event.double{--height:10.8rem} */
 
-
-.card.game-event{
-    --height:10.8rem;
-    font-family: 'Poppins';
-    padding: 1rem 2rem;
-    display: flex;
-    flex-direction: column;
-    padding: 1rem 2rem;
-    color: rgba(0,0,0,0.8);
-
-}
-
-.card.game-event .schedule{
-    height: 2rem;
-    margin-bottom: 0.4rem;
-    font-size: 1rem;
-
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-} 
-.card.game-event .schedule *:first-child{text-align: left;}
-.card.game-event .schedule *:last-child{text-align: right;}
-
-.card.game-event .schedule .match-no::before,
-.card.game-event .schedule .date::before,
-.card.game-event .schedule .time::before{
-    font-family: 'Material Symbols Outlined';
-    margin-right: 0.5rem;
-    font-size: 1.3rem;
-    position: relative;
-    
-}
-
-/* .card.game-event .schedule .match-no::before{content: '\e8b5';} */
-.card.game-event .schedule .date::before{content: '\ebcc';top:0.25rem;}
-.card.game-event .schedule .time::before{content: '\e8b5';top:0.3rem;}
-
-
-.card.game-event .result{
-    height: 2rem;
-    margin-top: 0.4rem;
-    background-color: rgba(0,0,0,0.05);
-    border-radius: 2rem;
-
-
-    line-height: 2rem;
-    text-align: center;
-}
-
-
-
-.card.game-event .team{
-    flex-grow: 1;
-    /* background-color: green; */
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-.card.game-event .team .left{
-    /* background-color: red; */
-    border-right: 1px solid rgba(0,0,0,0.3);
-    display: grid;
-    grid-template-columns: 1fr 3rem;
-    
-    
-}
-
-.card.game-event .team .right{
-    /* background-color: yellow; */
-    border-left: 1px solid rgba(0,0,0,0.3);
-    display: grid;
-    grid-template-columns: 3rem 1fr;
-}
-
-.card.game-event .team .left .score{margin-right: 0.2rem ;}
-.card.game-event .team .right .score{margin-left: 0.2rem ;}
-
-
-.card.game-event .team .score {
-    font-family: 'Anton';
-    font-size: 2rem;
-    color: rgba(0,0,0,0.6);
-    border-radius: 0.5em;
-    /* background-color: rgba(0,0,0,0.1); */
-
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-
-}
-
-.card.game-event .team .players{display: grid;align-self: center;}
-/* .card.game-event .team .players.single{grid-template-rows: 1fr;}
-.card.game-event .team .players.double{grid-template-rows: 1fr 1fr;} */
-
-.card.game-event .team .left .players{text-align: left;}
-.card.game-event .team .right .players{text-align: right;}
-
-
-.card.game-event .team .left .players .male::before,
-.card.game-event .team .left .players .female::before,
-.card.game-event .team .right .players .male::after,
-.card.game-event .team .right .players .female::after{
-    font-family: 'Material Symbols Outlined';
-    position: relative;
-    top: 0.2rem;
-}
-
-.card.game-event .team .left .players .male::before,
-.card.game-event .team .left .players .female::before{
-    padding-right: 0.5rem;
-}
-
-.card.game-event .team .right .players .male::after,
-.card.game-event .team .right .players .female::after{
-    padding-left: 0.5rem;
-
-}
-
-
-
-.card.game-event .team .left .players .male::before{content: '\e87c';}
-.card.game-event .team .left .players .female::before{content: '\f8db';}
-.card.game-event .team .right .players .male::after{content: '\e87c';}
-.card.game-event .team .right .players .female::after{content: '\f8db';}
 
 
 
@@ -478,10 +346,10 @@ tr td:last-child{font-family: 'Geologica';}
 
 td .male::before,
 td .female::before{
-font-family: 'Material Symbols Outlined';
-position: relative;
-top:0.1rem;
-margin-right: 0.5rem;
+    font-family: 'Material Symbols Outlined';
+    position: relative;
+    top:0.1rem;
+    margin-right: 0.5rem;
 }
 td .male::before{content: '\e87c';}
 td .female::before{content: '\f8db';}
@@ -517,3 +385,260 @@ td .female{
     font-size: 1rem;
     width: 100%;
 }
+
+
+
+
+/* -------------------------------------------------- game-event-s1 --- */
+/* .card.game-event-s1.single{--height:10.8rem} */
+/* .card.game-event-s1.double{--height:10.8rem} */
+
+
+.card.game-event-s1{
+    --height:10.8rem;
+    font-family: 'Poppins';
+    padding: 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+    color: rgba(0,0,0,0.8);
+
+}
+
+.card.game-event-s1 .schedule{
+    height: 2rem;
+    margin-bottom: 0.4rem;
+    font-size: 1rem;
+
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+} 
+.card.game-event-s1 .schedule *:first-child{text-align: left;}
+.card.game-event-s1 .schedule *:last-child{text-align: right;}
+
+.card.game-event-s1 .schedule .match-no::before,
+.card.game-event-s1 .schedule .date::before,
+.card.game-event-s1 .schedule .time::before{
+    font-family: 'Material Symbols Outlined';
+    margin-right: 0.5rem;
+    font-size: 1.3rem;
+    position: relative;
+    
+}
+
+/* .card.game-event-s1 .schedule .match-no::before{content: '\e8b5';} */
+.card.game-event-s1 .schedule .date::before{content: '\ebcc';top:0.25rem;}
+.card.game-event-s1 .schedule .time::before{content: '\e8b5';top:0.3rem;}
+
+
+.card.game-event-s1 .result{
+    height: 2rem;
+    margin-top: 0.4rem;
+    background-color: rgba(0,0,0,0.05);
+    border-radius: 2rem;
+
+
+    line-height: 2rem;
+    text-align: center;
+}
+
+
+
+.card.game-event-s1 .team{
+    flex-grow: 1;
+    /* background-color: green; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.card.game-event-s1 .team .left{
+    /* background-color: red; */
+    border-right: 1px solid rgba(0,0,0,0.3);
+    display: grid;
+    grid-template-columns: 1fr 3rem;
+    
+    
+}
+
+.card.game-event-s1 .team .right{
+    /* background-color: yellow; */
+    border-left: 1px solid rgba(0,0,0,0.3);
+    display: grid;
+    grid-template-columns: 3rem 1fr;
+}
+
+.card.game-event-s1 .team .left .score{margin-right: 0.2rem ;}
+.card.game-event-s1 .team .right .score{margin-left: 0.2rem ;}
+
+
+.card.game-event-s1 .team .score {
+    font-family: 'Anton';
+    font-size: 2rem;
+    color: rgba(0,0,0,0.6);
+    border-radius: 0.5em;
+    /* background-color: rgba(0,0,0,0.1); */
+
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+}
+
+.card.game-event-s1 .team .players{display: grid;align-self: center;font-size: 0.8rem;}
+/* .card.game-event-s1 .team .players.single{grid-template-rows: 1fr;}
+.card.game-event-s1 .team .players.double{grid-template-rows: 1fr 1fr;} */
+
+.card.game-event-s1 .team .left .players{text-align: left;}
+.card.game-event-s1 .team .right .players{text-align: right;}
+
+
+.card.game-event-s1 .team .left .players .male::before,
+.card.game-event-s1 .team .left .players .female::before,
+.card.game-event-s1 .team .right .players .male::after,
+.card.game-event-s1 .team .right .players .female::after{
+    font-family: 'Material Symbols Outlined';
+    position: relative;
+    top: 0.2rem;
+}
+
+.card.game-event-s1 .team .left .players .male::before,
+.card.game-event-s1 .team .left .players .female::before{
+    padding-right: 0.5rem;
+}
+
+.card.game-event-s1 .team .right .players .male::after,
+.card.game-event-s1 .team .right .players .female::after{
+    padding-left: 0.5rem;
+
+}
+
+
+
+.card.game-event-s1 .team .left .players .male::before{content: '\e87c';}
+.card.game-event-s1 .team .left .players .female::before{content: '\f8db';}
+.card.game-event-s1 .team .right .players .male::after{content: '\e87c';}
+.card.game-event-s1 .team .right .players .female::after{content: '\f8db';}
+
+
+
+
+/* ----------------------------------------------------- game event */
+.card.game-event{
+    --height:max-content;
+    font-family: 'Poppins';
+    padding: 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+    color: rgba(0,0,0,0.8);
+}
+.card.game-event.highlight{
+    background-color: var(--banner);
+    color: rgba(255,255,255,0.8);
+}
+
+
+
+.card.game-event .schedule{
+    height: 2rem;
+    margin-bottom: 0.4rem;
+    font-size: 1rem;
+
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+} 
+.card.game-event .schedule *:first-child{text-align: left;}
+.card.game-event .schedule *:last-child{text-align: right;}
+
+.card.game-event .schedule .match-no::before,
+.card.game-event .schedule .date::before,
+.card.game-event .schedule .time::before{
+    font-family: 'Material Symbols Outlined';
+    margin-right: 0.5rem;
+    font-size: 1.3rem;
+    position: relative;
+    
+}
+
+/* .card.game-event-s1 .schedule .match-no::before{content: '\e8b5';} */
+.card.game-event .schedule .date::before{content: '\ebcc';top:0.25rem;}
+.card.game-event .schedule .time::before{content: '\e8b5';top:0.3rem;}
+
+.card.game-event .result{
+    height: 2rem;
+    margin-top: 0.4rem;
+    background-color: rgba(0,0,0,0.05);
+    border-radius: 2rem;
+    
+    
+    line-height: 2rem;
+    text-align: center;
+}
+
+.card.game-event.highlight .result{
+    background-color: rgba(255,255,255,0.1);
+}
+
+
+.card.game-event .team{
+    font-size: 1rem;
+}
+
+.card.game-event .team > .top{text-align: left;}
+.card.game-event .team > .bottom{text-align: right;}
+
+
+.card.game-event .team .top .male::before,
+.card.game-event .team .top .female::before,
+.card.game-event .team .bottom .male::after,
+.card.game-event .team .bottom .female::after{
+    font-family: 'Material Symbols Outlined';
+    position: relative;
+    top: 0.2rem;
+}
+
+.card.game-event .team .top .male::before,
+.card.game-event .team .top .female::before{
+    padding-right: 0.5rem;
+}
+
+.card.game-event .team .bottom .male::after,
+.card.game-event .team .bottom .female::after{
+    padding-left: 0.5rem;
+}
+
+.card.game-event .team .top .male::before{content: '\e87c';}
+.card.game-event .team .top  .female::before{content: '\f8db';}
+.card.game-event .team .bottom .male::after{content: '\e87c';}
+.card.game-event .team .bottom .female::after{content: '\f8db';}
+
+.card.game-event .score .top,
+.card.game-event .score .bottom{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    font-family: 'Anton';
+    font-size: 1.5rem;
+    
+    text-align: center;
+
+
+}
+
+.card.game-event .score .top{margin-top: 0.5rem;}
+.card.game-event .score .bottom{margin-bottom: 0.5rem;}
+
+
+
+
+.card.game-event .score .round1{text-align: right;}
+.card.game-event .score .round3{text-align: left;}
+
+
+
+.card.game-event .score .top{border-bottom: 1px solid rgba(0,0,0,0.3);}
+.card.game-event.highlight .score .top{border-bottom: 1px solid rgba(255,255,255,0.7);}
