--- a/base/style.css
+++ b/base/style.css
@@ -599,6 +599,9 @@ td .female{
     text-align: center;
     font-weight: 600;
 }
+.card.game-event .header.hide{
+    display: none;
+}
 
 .card.game-event .schedule{
     height: 2rem;
