--- a/base/style.css
+++ b/base/style.css
@@ -26,14 +26,20 @@ html,body{height: 100%;}
     box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.6);
 }
 /* @media (orientation: portrait) {.banner {--height: 20vh;}} */
-@media (orientation: landscape) {.banner {--width: 40vw;}}
+@media (orientation: landscape) {
+    .banner {--width: 40vw;}
+    .shelf{
+        width: 60vw;
+    }
+}
 
 @media (orientation: landscape) {
     /* Quick Fix */
     .banner {
         display: grid;
         align-items: center;
-        justify-items: center;}
+        justify-items: center;
+    }
 }
 
 
