--- a/base/style.css
+++ b/base/style.css
@@ -24,6 +24,8 @@ html,body{height: 100%;}
     z-index: 10;
     background-color: var(--banner);
     box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.6);
+
+    overflow: hidden;
 }
 /* @media (orientation: portrait) {.banner {--height: 20vh;}} */
 @media (orientation: landscape) {
@@ -64,6 +66,7 @@ html,body{height: 100%;}
 .banner .content{
     /* background-color: rgba(255,255,255,0.1); */
     justify-self: center;
+    
 }
 
 .banner .content .title{
@@ -281,6 +284,11 @@ a{
     /* background-color: red; */
     height: 3rem;
     line-height: 3rem;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 20ch;
+    white-space: nowrap;
 }
 
 .card.players.double .name:nth-child(1){
@@ -290,7 +298,8 @@ a{
 .card.players .icon{
     text-align: right;
     margin-right: 2rem;
-    color:rgba(0,0,0,0.7)
+    color:rgba(0,0,0,0.7);
+    margin-left: 1rem;
 }
 
 
