--- a/base/style.css
+++ b/base/style.css
@@ -85,6 +85,7 @@ html,body{height: 100%;}
     font-family: 'Poppins';
     font-size: 1.1rem;
     display: grid;
+    -webkit-tap-highlight-color:transparent;
     
 }
 @media (orientation: portrait) {
